testing viewport behaviour

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div id="genFrame" class="bgCol">
+    <div id="genFrame" class="bgCol frameWidth">
         <div id="iconRow">
             <img src="./data_object.svg" class="icon alignLeft" alt="App Logo">
             <div id="welcomeInfo">
