--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="genFrame" class="bgCol show">
         <div id="iconRow">
             <img src="./images/data_object.svg" class="icon alignLeft" alt="App Logo">
+            <input type="image" id="mobIcon" class="icon alignLeft" src="./images/mobile_friendly.svg" alt="Mobile Friendly Input">
             <img id="infoIcon" class="icon alignLeft" src="./images/info.svg"  alt="Show Info">
         </div>
         <h1 class="white bold">Keycode Generator</h1>
