--- a/index.html
+++ b/index.html
@@ -17,17 +17,14 @@
         <div id="mobFriendly">
             <input type="text" id="mobInputTXT" placeholder="Mobile Input"></input>
         </div>
+        <div id="centCont">
         <h1 class="white bold">Keycode Generator</h1>
-        <p class="white regular">Type any key to generate the keycode</p>
+        <p class="white regular txtMarg">Type any key to generate the keycode</p>
             <ul id="outputRowContent">
                 <li id="keyEvent" class="themeCol" type="text"></li>
             </ul>
             <p id="keyCode" class="white regular alignLeft">Key Code: </p>
-
-            <div>
-
-
-            </div>
+        </div>
 
         <div id="btnRowContent">
             <button id="btn" class="white regular"><img src="./images/restart_alt.svg" class="icon" alt="Clear Selection"><a href="javascript: reload()"></a>Reset</button>
