--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div id="genFrame" class="bgCol show">
+    <div id="genFrame" class="frame bgCol show">
         <div id="iconRow">
             <img src="./images/data_object.svg" class="icon alignLeft" alt="App Logo">
             <img id="mobIcon" src="./images/mobile_friendly.svg" class="icon alignLeft" alt="Mobile Friendly Input">
@@ -18,8 +18,8 @@
             <input type="text" id="mobInputTXT" placeholder="Mobile Input"></input>
         </div>
         <div id="centCont">
-        <h1 class="white bold">Keycode Generator</h1>
-        <p class="white regular txtMarg">Type any key to generate the keycode</p>
+        <h1 id="title" class="white bold">Keycode Generator</h1>
+        <p id="desc" class="white regular txtMarg">Type any key to generate the keycode</p>
             <ul id="outputRowContent">
                 <li id="keyEvent" class="themeCol" type="text"></li>
             </ul>
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div id="welcomeFrame" class="bgCol hide">
+    <div id="welcomeFrame" class="frame bgCol hide">
         <div id="iconRow">
             <img src="./images/data_object.svg" class="icon alignLeft" alt="App Logo">
             <img id="closeIcon" class="icon alignLeft" src="./images/cancel.svg"  alt="Close Welcome info">
